--- a/styles/_reservation.scss
+++ b/styles/_reservation.scss
@@ -17,25 +17,11 @@
     background-image: url(/images/ready-bg-desktop.jpg);
 
     h3 {
-      grid-column: 2;
-      align-self: center;
-      margin-bottom: 0;
-      justify-self: flex-start;
-    }
-    button {
-      justify-self: self-start;
-      margin-bottom: 0;
-      grid-column: 3;
-      align-self: center;
-    }
-  }
-  @media screen and (min-width: $bp-desktop) {
-    //big desktop
-    h3 {
-      grid-column: 1 / span 3;
+      grid-column: 1 / -1;
       grid-row: 1;
       font-size: $fs-h2;
       line-height: 56px;
+      text-align: left;
     }
     button {
       grid-column: 4;
